# presensi-uty

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: decrypt.md
src/: error.rs  lib.rs  main.rs
src/presensi/: cli.rs  client.rs  mod.rs  scraper.rs  types.rs
