[package]
name = "presensi-uty"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
base64 = "0.22"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "json", "form"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
